# SAGTAwebsite

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  entrypoint.sh  litestream.yml  manage.py  mysite_nginx.conf  ofelia.ini  pyproject.toml  requirements.dev.txt  requirements.txt  runserver.sh
.github/workflows/: build-push-docker.yml  validate.yml
auth/: adapter.py  apps.py  forms.py  views.py
authusers/: apps.py  middleware.py  urls.py  views.py  wagtail_hooks.py
backup/: backups_here.txt
base/: admin.py  signals.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_alter_blogdetailpage_content.py
contact/: forms.py  models.py  views.py
contact/migrations/: 0001_initial.py  0002_formfield_clean_name.py  0003_alter_contactpage_from_address_and_more.py  0004_alter_formfield_id.py  0005_contactpage_contact_img_link.py
contact_us/: models.py
contact_us/migrations/: 0001_initial.py
deployment/: .env.dev.example  .env.prod.example  Makefile  README.md  docker-compose.override.sample.yml  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
download/: admin.py  api_views.py  models.py  urls.py
download/migrations/: 0001_initial.py  (+1 more)
flex/: models.py  wagtail_hooks.py
home/: models.py
journal/: models.py
member/: admin.py  models.py
mysite/: api.py  backup.py  cron.py  urls.py  views.py  wagtail_hooks.py
mysite/settings/: base.py  (+2 more)
payments/: admin.py  models.py  paystack.py  urls.py  views.py
prepshare/: apps.py  models.py
static/: staticfiles.json
streams/: blocks.py  image_formats.py  wagtail_hooks.py
(+74 files in other folders)
