[project]
name = "sagtawebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.63",
    "django==5.2.9",
    "django-allauth==65.13.0",
    "django-cors-headers==4.7.0",
    "django-dbbackup==4.3.0",
    "django-debug-toolbar==5.2.0",
    "django-import-export==4.3.8",
    "django-oauth-toolkit==1.7.1",
    "django-storages[s3]==1.14.4",
    "django-turnstile==0.1.2",
    "djangorestframework==3.16.0",
    "gspread==6.2.1",
    "gunicorn>=23.0.0",
    "python-dotenv==1.1.1",
    "wagtail==7.2.1",
    "wagtailmenus==4.0.4",
    "whitenoise==6.9.0",
]
